# SRE_Snake

./: CMakeLists.txt  main.cpp
Engine/: Component.cpp  GameObject.cpp  GameObject.h  Globals.cpp  Globals.h  SpriteComponent.cpp  SpriteComponent.h
Game/: FruitComponent.cpp  FruitComponent.h  SnakeBodyComponent.h  SnakeHeadComponent.cpp  SnakeHeadComponent.h  StepMoverComponent.cpp  StepMoverComponent.h
